--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ span
         margin: 0;
     }
     nav .nav-list{
-        position: absolute;
+        position: fixed;
         top: 90px;
         right: -85%;
         bottom: 0;
